--- a/devellopement_perso.cbp
+++ b/devellopement_perso.cbp
@@ -32,9 +32,10 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="main.cpp" />
 		<Unit filename="complexe.cpp" />
 		<Unit filename="complexe.h" />
+		<Unit filename="include.h" />
+		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
